--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:studio": "bunx drizzle-kit studio",
     "db:generate": "bunx drizzle-kit generate",
     "db:push": "bunx drizzle-kit push",
-    "db:seed": "bun run src/db/seed.ts"
+    "db:seed": "bun ./src/scripts/seed.ts"
   },
   "dependencies": {
     "@clerk/localizations": "^3.9.12",
@@ -42,6 +42,7 @@
     "pg": "^8.13.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.2",
     "typescript": "^5"
   }
 }
