--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@clerk/localizations": "^3.9.12",
     "@clerk/nextjs": "^6.9.15",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +33,7 @@
     "react-confetti": "^6.2.2",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
+    "separator": "^0.1.0",
     "sonner": "^1.7.2",
     "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
